<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true">

    <ProgressBar
        android:id="@+id/itemDetailLoading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clItemInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivItemImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground">

        </androidx.appcompat.widget.AppCompatImageView>

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivItemImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivItemImage"
            app:layout_constraintTop_toTopOf="@+id/ivItemImage"
            tools:text="Item Name" />


        <View
            android:id="@+id/div1"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivItemImage" />

        <TextView
            android:id="@+id/tvItemFlavorTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_description"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div1" />


        <TextView
            android:id="@+id/tvItemFlavorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/n_a"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemFlavorTextTitle"
            tools:text="@string/n_a" />


        <View
            android:id="@+id/div2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemFlavorText" />

        <TextView
            android:id="@+id/tvItemEffectTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_effect"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div2" />

        <ScrollView
            android:id="@+id/svEffectText"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvItemEffectTextTitle">

            <TextView
                android:id="@+id/tvEffectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/n_a"
                tools:text="Effect Text Description" />

        </ScrollView>

        <View
            android:id="@+id/div3"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/svEffectText" />

        <TextView
            android:id="@+id/tvCostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/div3" />

        <TextView
            android:id="@+id/tvCostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_colon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div3"
            app:layout_constraintBottom_toTopOf="@id/div4"
            tools:text="Cost" />

        <View
            android:id="@+id/div4"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCostTitle" />

        <TextView
            android:id="@+id/tvHeldPokemonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found_in_the_wild"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/div4" />

        <TextView
            android:id="@+id/tvPokemonHeld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/n_a"
            android:textColor="@color/textHighlightDefault"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeldPokemonTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>